[package]
name = "mips_sim"
version = "0.1.0"
authors = ["Haorna Wang <waharaxn@gmail.com>"]
edition = "2018"
description = "A MIPS Architecture Simulator"

[dependencies]
linenoise-rust = "0.2.0"
structopt = "0.2.10"
failure = "0.1.5"
exitfailure = "0.5.1"
[dev-dependencies]
assert_cmd = "0.10"
predicates = "1"
